compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.out
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA;)I):
    fun <get-foo>(): Int defined in A
    fun `access$getFoo$p`(a: A): Int defined in A
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA;I)V):
    fun <set-foo>(<set-?>: Int): Unit defined in A
    fun `access$setFoo$p`(a: A, d: Int): Unit defined in A
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo(LA;)I):
    fun `access$getFoo`(a: A): Int defined in A
    fun getFoo(): Int defined in A
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:1:7: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo(LA;I)V):
    fun `access$setFoo`(a: A, d: Int): Unit defined in A
    fun setFoo(i: Int): Unit defined in A
class A {
      ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:5:5: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo$p(LA;)I):
    fun <get-foo>(): Int defined in A
    fun `access$getFoo$p`(a: A): Int defined in A
    fun `access$getFoo$p`(a: A): Int = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:6:5: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo$p(LA;I)V):
    fun <set-foo>(<set-?>: Int): Unit defined in A
    fun `access$setFoo$p`(a: A, d: Int): Unit defined in A
    fun `access$setFoo$p`(a: A, d: Int) {}
    ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:11:5: error: platform declaration clash: The following declarations have the same JVM signature (access$getFoo(LA;)I):
    fun `access$getFoo`(a: A): Int defined in A
    fun getFoo(): Int defined in A
    fun `access$getFoo`(a: A): Int = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorPropertyAndFunSignatureClash.kt:12:5: error: platform declaration clash: The following declarations have the same JVM signature (access$setFoo(LA;I)V):
    fun `access$setFoo`(a: A, d: Int): Unit defined in A
    fun setFoo(i: Int): Unit defined in A
    fun `access$setFoo`(a: A, d: Int) {}
    ^
COMPILATION_ERROR